BaSP-W04-2022: version tablet: footer cloned from desktop version and fixed, README done

--- a/Week-04/css/footer.css
+++ b/Week-04/css/footer.css
@@ -15,16 +15,12 @@ footer {
     flex-direction: column;
     align-items: center;
 }
+
 .footer-data p {
     justify-content: center;
 }
 
-@media (min-width:1024px){
-    footer{
-        width: 64%;
-        float: right;
-        margin-right: 2.5%;
-    }
+@media (min-width:768px){
 
     .footer-lists {
         display: flex;
@@ -34,6 +30,7 @@ footer {
         margin-bottom: 1%;
         border: none;
     }
+
     .footer-lists div {
         width: 35%;
         margin-left: 10%;
@@ -51,6 +48,47 @@ footer {
         margin-top: 10%;
         border-top: 4px solid #49A37B ;
     }
+
+    .footer-media-logos a {
+        margin-top: 3%;
+    }
+}
+
+@media (min-width:1024px){
+
+    footer{
+        width: 64%;
+        float: right;
+        margin-right: 2.5%;
+    }
+
+    .footer-lists {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 3%;
+        margin-bottom: 1%;
+        border: none;
+    }
+
+    .footer-lists div {
+        width: 35%;
+        margin-left: 10%;
+    }
+
+    .company-list {
+        margin-left: -5%;
+    }
+
+    .support-list {
+        margin-left: -7%;
+    }
+
+    .footer-media-logos {
+        margin-top: 10%;
+        border-top: 4px solid #49A37B ;
+    }
+
     .footer-media-logos a {
         margin-top: 3%;
     }
